--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,17 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/gridview"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:numColumns="3"
-    android:layout_marginTop="30dp"
-    android:layout_marginStart="15dp"
-    android:layout_marginEnd="15dp"
-    android:verticalSpacing="30dp"
-    android:horizontalSpacing="30dp"
-    android:layout_gravity="center"
-    tools:context=".HomeActivity">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-</GridView>
+    <GridView
+        android:id="@+id/gridview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:horizontalSpacing="15dp"
+        android:numColumns="3"
+        android:scrollbars="none"
+        android:stretchMode="columnWidth"
+        android:verticalSpacing="15dp"
+        tools:context=".HomeActivity">
+
+    </GridView>
+
+
+</RelativeLayout>
+
+
+
