--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -18,7 +18,7 @@
         android:scrollbars="none"
         android:stretchMode="columnWidth"
         android:verticalSpacing="15dp"
-        tools:context=".HomeActivity">
+        tools:context=".activity.HomeActivity">
 
     </GridView>
 
