--- a/app/src/main/res/layout/griditem_layout.xml
+++ b/app/src/main/res/layout/griditem_layout.xml
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="5dp"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="10dp"
-    android:backgroundTint="@color/colorGreenishBlue">
+    android:backgroundTint="@color/colorGreenishBlue"
+    android:padding="5dp"
+    app:cardCornerRadius="10dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_gravity="center"
         android:layout_margin="10dp"
-        android:background="@color/colorGreenishBlue"
-        android:layout_gravity="center">
+        android:background="@color/colorGreenishBlue">
 
         <ImageView
             android:id="@+id/iv_gridItem"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:ignore="ContentDescription"
             android:layout_centerHorizontal="true"
+            tools:ignore="ContentDescription"
             tools:src="@drawable/ic_search_hospital" />
 
         <TextView
@@ -31,10 +31,10 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="3dp"
             android:textAlignment="center"
+            android:textColor="@color/colorWhite"
             android:textSize="15sp"
-            tools:text="Search Hospital"
             android:textStyle="bold"
-            android:textColor="@color/colorWhite"/>
+            tools:text="Search Hospital" />
 
 
     </RelativeLayout>
