--- a/app/src/main/res/layout/rv_item_recent_search.xml
+++ b/app/src/main/res/layout/rv_item_recent_search.xml
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:orientation="vertical"
     android:padding="10dp">
 
-    <com.google.android.material.imageview.ShapeableImageView
+    <ImageView
         android:id="@+id/siv_hospitalImage"
         android:layout_width="150dp"
-        android:layout_height="100dp"/>
+        android:layout_height="100dp" />
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/mtv_hospitalName"
         android:layout_width="150dp"
         android:layout_height="20dp"
         android:textColor="@color/colorBlack"
-        android:textSize="15sp"/>
+        android:textSize="15sp" />
 
 </LinearLayout>
